<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/folderName"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom"
        android:minHeight="28dp"
        android:text="@string/sample_title"
        android:textColor="@color/textDark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/folderDetails"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom"
        android:minHeight="20dp"
        android:text="@string/sample_desc"
        android:textColor="@color/textGrey"
        android:textSize="14sp"
        android:maxLines="1"
        android:maxLength="43"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/folderName" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/empty_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@color/greyShadow" />
</android.support.constraint.ConstraintLayout>