<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ImageView
        android:id="@+id/noteIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:tint="@color/grey"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_menu_record" />

    <TextView
        android:id="@+id/noteTitle"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom"
        android:text="@string/sample_title"
        android:textColor="@color/textDark"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/noteIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noteDesc"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom"
        android:minHeight="20dp"
        android:text="@string/sample_desc"
        android:textColor="@color/textGrey"
        android:textSize="14sp"
        android:maxLines="2"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/noteIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitle"/>

    <ImageView
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/empty_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@color/greyShadow" />
</android.support.constraint.ConstraintLayout>