<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNoteActivity">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recorderLayout"
        app:layout_constraintVertical_bias="0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/inputTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/folderChooser"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/folderIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:tint="@color/grey"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_menu_folder"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/folderName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DEFAULT"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/folderIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/cloudIcon"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:tint="@color/cloud_not_saved"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/ic_cloud"
                app:layout_constraintTop_toTopOf="@id/folderChooser"
                app:layout_constraintBottom_toBottomOf="@id/folderChooser"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:contentDescription="@null"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@color/greyShadow"
                app:layout_constraintTop_toBottomOf="@id/folderChooser"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/folderChooser">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputTitleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:inputType="textCapWords|textAutoComplete"
                    android:maxLines="1"
                    android:hint="@string/input_title" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputTitle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textAutoComplete|textCapSentences"
                    android:textSize="14sp"
                    android:hint="@string/input_description" />
            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Recordings"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/textDark"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!--<ImageView-->
                    <!--android:id="@+id/buttonPlay"-->
                    <!--android:layout_width="50dp"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:adjustViewBounds="true"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:layout_marginStart="16dp"-->
                    <!--android:contentDescription="@null"-->
                    <!--app:layout_constraintHorizontal_bias="0"-->
                    <!--app:srcCompat="@drawable/ic_action_play"-->
                    <!--app:layout_constraintTop_toBottomOf="@id/label"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--app:layout_constraintEnd_toEndOf="parent"/>-->

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recordingList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="56dp"
                    app:layout_constraintTop_toBottomOf="@id/label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/recorderLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:elevation="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iconRecording"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:tint="@color/grey"
            android:layout_marginStart="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/empty_content_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_menu_record"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/record_timer_default"
            android:textSize="14sp"
            android:textColor="@color/textGrey"
            app:layout_constraintStart_toEndOf="@id/iconRecording"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/startRecordButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/ic_action_record"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/pauseButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/ic_action_pause"
            android:backgroundTint="@color/grey"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/stopRecordButton"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<ImageButton-->
            <!--android:id="@+id/stopRecordButton"-->
            <!--android:layout_width="24dp"-->
            <!--android:layout_height="24dp"-->
            <!--android:layout_marginEnd="28dp"-->
            <!--android:background="@drawable/ic_action_cancel"-->
            <!--android:backgroundTint="@color/grey"-->
            <!--android:contentDescription="@string/empty_content_description"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent" />-->
        <Button
            android:id="@+id/stopRecordButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/ic_action_cancel"
            android:backgroundTint="@color/grey"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>